# devstrip

./: Cargo.toml  Makefile  README.md
src/: cli.rs  core.rs  gui.rs  lib.rs  main.rs
