[package]
name = "devstrip"
version = "0.1.0"
edition = "2021"
description = "Developer disk cleanup tool (CLI)"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cleanup", "developer", "cache", "cli"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
byte-unit = "4.0"
