[package]
name = "devstrip"
version = "0.1.1"
edition = "2021"
description = "Developer disk cleanup tool"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cleanup", "developer", "cache", "cli"]
license = "BSD-3-Clause"

[features]
default = ["gui"]
gui = ["gpui", "webbrowser"]
cli = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
human_bytes = "0.4.3"
gpui = { version = "0.2.2", optional = true }
webbrowser = { version = "0.8", optional = true }
